[FIX] web_studio: show hooks on list editor
Since commit odoo/enterprise@219a996 the CSS rules
in `list_editor.scss` were no longer applied, therefore the
hooks were not showing when dropping elements.

The selectors are now more specific in order to apply the transparent
border.

closes odoo/enterprise#5129

--- a/web_studio/static/src/scss/list_editor.scss
+++ b/web_studio/static/src/scss/list_editor.scss
@@ -1,11 +1,15 @@
-.o_web_studio_list_view_editor .o_list_view .table {
+.o_web_studio_list_view_editor .o_list_table.table {
     // Define transparent borders to prevent flickering on hover
     border-collapse: separate;
-    th, td {
-        border-left: 1px solid transparent;
-        border-right: 1px solid transparent;
-        &.o_web_studio_hook {
-            border-left: 2px solid transparent;
+    thead {
+        tr {
+            th, td {
+                border-left: 1px solid transparent;
+                border-right: 1px solid transparent;
+                &.o_web_studio_hook {
+                    border-left: 2px solid transparent;
+                }
+            }
         }
     }
 
